# src/Mirakurun/api/streamids/{networkId}/{streamId}/stream.ts
@@ -1,0 +1,139 @@
+/*
+   Copyright 2016 kanreisa
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+import { Operation } from "express-openapi";
+import * as api from "../../../../api";
+import * as apid from "../../../../../../api";
+import { OutputFormat } from "../../../../common";
+import _ from "../../../../_";
+
+export const parameters = [
+    {
+        in: "path",
+        name: "networkId",
+        type: "integer",
+        minimum: 0,
+        maximum: 65535,
+        required: true
+    },
+    {
+        in: "path",
+        name: "streamId",
+        type: "integer",
+        minimum: 0,
+        maximum: 65535,
+        required: true
+    },
+    {
+        in: "header",
+        name: "X-Mirakurun-Priority",
+        type: "integer",
+        minimum: 0
+    },
+    {
+        in: "query",
+        name: "decode",
+        type: "integer",
+        minimum: 0,
+        maximum: 1
+    },
+    {
+        in: "query",
+        name: "format",
+        type: "string",
+        enum: ["ts", "tlv"]
+    }
+];
+
+export const get: Operation = (req, res) => {
+    const networkId = req.params.networkId as any as number;
+    const streamId = req.params.streamId as any as number;
+    const channels = _.channel.findByStreamId(networkId, streamId);
+
+    if (channels.length === 0) {
+        api.responseError(res, 404);
+        return;
+    }
+
+    const userId = (req.ip || "unix") + ":" + (req.socket.remotePort || Date.now());
+    const contentType = req.query.format === "tlv" ? "application/octet-stream" : "video/MP2T";
+    const outputFormat = (req.query.format === "tlv" ? "tlv" : undefined) as OutputFormat | undefined;
+
+    if (req.method === "HEAD") {
+        res.setHeader("Content-Type", contentType);
+        res.setHeader("X-Mirakurun-Tuner-User-ID", userId);
+        res.status(200).end();
+        return;
+    }
+
+    let requestAborted = false;
+    req.once("close", () => requestAborted = true);
+
+    (<any> res.socket)._writableState.highWaterMark = Math.max(res.writableHighWaterMark, 1024 * 1024 * 16);
+    res.socket.setNoDelay(true);
+
+    _.tuner.initStreamIDStream(networkId, streamId, {
+        id: userId,
+        priority: parseInt(req.get("X-Mirakurun-Priority"), 10) || 0,
+        agent: req.get("User-Agent"),
+        url: req.url,
+        disableDecoder: (<number> <any> req.query.decode === 0),
+        outputFormat
+    }, res)
+        .then(streamFilter => {
+            if (requestAborted === true || req.aborted === true) {
+                return streamFilter.close();
+            }
+
+            req.once("close", () => streamFilter.close());
+
+            res.setHeader("Content-Type", contentType);
+            res.setHeader("X-Mirakurun-Tuner-User-ID", userId);
+            res.status(200);
+        })
+        .catch((err) => api.responseStreamErrorHandler(res, err));
+};
+
+get.apiDoc = {
+    tags: ["streamids", "stream"],
+    operationId: "getStreamIDStream",
+    produces: ["video/MP2T", "application/octet-stream"],
+    responses: {
+        200: {
+            description: "OK",
+            headers: {
+                "X-Mirakurun-Tuner-User-ID": {
+                    type: "string"
+                }
+            }
+        },
+        404: {
+            description: "Not Found"
+        },
+        503: {
+            description: "Tuner Resource Unavailable"
+        },
+        default: {
+            description: "Unexpected Error"
+        }
+    }
+};
+
+export const head: Operation = (...args) => get(...args);
+
+head.apiDoc = {
+    ...get.apiDoc,
+    operationId: undefined
+};
